--- a/MindScribe_V0.1/package.json
+++ b/MindScribe_V0.1/package.json
@@ -11,19 +11,21 @@
   },
   "dependencies": {
     "@mlc-ai/web-llm": "^0.2.75",
+    "dompurify": "^3.3.1",
     "framer-motion": "^11.0.0",
+    "jspdf": "^4.0.0",
     "localforage": "^1.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
-    "recharts": "^2.12.0",
-    "jspdf": "^2.5.1"
+    "recharts": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "baseline-browser-mapping": "^2.9.12",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
