--- a/MindScribe_V0.1/package.json
+++ b/MindScribe_V0.1/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.0.0",
     "jspdf": "^4.0.0",
     "localforage": "^1.10.0",
+    "onnxruntime-web": "^1.23.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
