--- a/MindScribe_V0.1/package.json
+++ b/MindScribe_V0.1/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@huggingface/transformers": "^3.8.1",
     "@mlc-ai/web-llm": "^0.2.75",
     "@remotion/whisper-web": "^4.0.409",
     "dompurify": "^3.3.1",
@@ -17,6 +18,7 @@
     "jspdf": "^4.0.0",
     "localforage": "^1.10.0",
     "onnxruntime-web": "^1.23.2",
+    "piper-wasm": "^0.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
@@ -34,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vite-plugin-static-copy": "^3.2.0"
   }
 }
